# rk3588-fw-nix

./: .gitignore  Cargo.toml  bl31.elf  flake.nix  flash.sh  overlay.nix  pkgs.nix  treefmt.nix
crates/httpboot/: Cargo.toml
crates/httpboot/src/: main.rs  snp2smoltcp.rs
keys/: pk.cer
misc/: extractbl31.py  rk3588-uefi.its  uefi.its
pkgs/: atf.nix  boot-bin.nix  boot-fit.nix  edk2-base-tools.nix  edk2-rk3588-fit.nix  edk2-rk3588-img.nix  edk2-rk3588.nix  edk2.nix  flash-spi-cmd.nix  gpt-blob.nix  httpboot.nix  optee-ftpm.nix  optee-os.nix  optee.nix  rkbin-bl31.nix  rkbin-bl32.nix  rkbin-loader.nix  rkbin-tpl.nix  trusted-firmware-a.nix  uboot-blob.nix  uboot-spl-blob.nix  uboot-spl.nix  uboot-tools.nix  uboot.nix  uefi-fit.nix  uefi.nix
