[package]
name = "httpboot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
uefi = { workspace = true, features = [
    "panic_handler",
    "alloc",
    "global_allocator",
    "logger",
] }
smoltcp = { workspace = true, features = [
    "medium-ethernet",
    "proto-ipv4",
    "proto-ipv6",
    "socket-raw",
    "socket-icmp",
    "socket-dhcpv4",
] }
